# bookclub_v2

./: .gitignore  README.md  TODO.md  pyproject.toml
bookclub/: api.py  settings.py  urls.py
books/: models.py  serializers.py
books/migrations/: 0001_initial.py  0002_initial.py
docs/: app_development_plan.docx
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/auth/: [...nextauth].ts
frontend/app/auth/forgot_password/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/layouts/: AuthLayout.tsx
users/: serializers.py  views.py
users/migrations/: 0001_initial.py
